--- a/TritonExpress/TritonExpress/Views/Branches/Create.cshtml
+++ b/TritonExpress/TritonExpress/Views/Branches/Create.cshtml
@@ -40,7 +40,7 @@
             </div>*@
             <div class="form-group">
                @Html.LabelFor(m => m.Province)
-              @Html.DropDownListFor(m => m.Provinces,new SelectList(Model.Provinces,"Id","Name"),new {@class ="form-control" })
+              @Html.DropDownListFor(m => m.Province,new SelectList(Model.Provinces,"Id","Name"),new {@class ="form-control" })
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
