--- a/TritonExpress/TritonExpress/Views/Shared/_Layout.cshtml
+++ b/TritonExpress/TritonExpress/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Branches" asp-action="Index">Branches</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Index">Vehicles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="VehicleTypes" asp-action="Index">VehicleType</a>
+                        </li>
                     </ul>
                 </div>
             </div>
