--- a/TritonExpress/TritonExpress/Views/VehicleTypes/Create.cshtml
+++ b/TritonExpress/TritonExpress/Views/VehicleTypes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TritonExpress.Models.Province
+﻿@model TritonExpress.Models.VehicleType
 
 @{
     ViewData["Title"] = "Create";
@@ -7,41 +7,32 @@
 
 <h1>Create</h1>
 
-<h4>Province</h4>
+<h4>VehicleType</h4>
 <hr />
-
-@if(ViewBag.Error != null){
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <strong>@ViewBag.Error</strong> 
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
-}
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" />
                 <span asp-validation-for="Id" class="text-danger"></span>
-            </div>*@
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="Descriptions" class="control-label"></label>
+                <input asp-for="Descriptions" class="form-control" />
+                <span asp-validation-for="Descriptions" class="text-danger"></span>
             </div>
-            @*<div class="form-group form-check">
+            <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsDeleted" /> @Html.DisplayNameFor(model => model.IsDeleted)
                 </label>
-            </div>*@
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
