--- a/TritonExpress/TritonExpress/Views/VehicleTypes/Delete.cshtml
+++ b/TritonExpress/TritonExpress/Views/VehicleTypes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TritonExpress.Models.Province
+﻿@model TritonExpress.Models.VehicleType
 
 @{
     ViewData["Title"] = "Delete";
@@ -6,40 +6,32 @@
 }
 
 <h1>Delete</h1>
-@if (ViewBag.Error != null)
-{
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <strong>@ViewBag.Error</strong>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-}
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Province</h4>
+    <h4>VehicleType</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Descriptions)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Descriptions)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsDeleted)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsDeleted)
         </dd>
     </dl>
-
+    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
