--- a/TritonExpress/TritonExpress/Views/VehicleTypes/Edit.cshtml
+++ b/TritonExpress/TritonExpress/Views/VehicleTypes/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TritonExpress.Models.Province
+﻿@model TritonExpress.Models.VehicleType
 
 @{
     ViewData["Title"] = "Edit";
@@ -7,18 +7,7 @@
 
 <h1>Edit</h1>
 
-<h4>Province</h4>
-
-@if (ViewBag.Error != null)
-{
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <strong>@ViewBag.Error</strong>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-}
-
+<h4>VehicleType</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -31,9 +20,9 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="Descriptions" class="control-label"></label>
+                <input asp-for="Descriptions" class="form-control" />
+                <span asp-validation-for="Descriptions" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
