DEV: Correct Province Controller and View

--- a/TritonExpress/TritonExpress/Views/Provinces/Delete.cshtml
+++ b/TritonExpress/TritonExpress/Views/Provinces/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h4>Delete a Province</h4>
 @if (ViewBag.Error != null)
 {
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
