--- a/TritonExpress/TritonExpress/Views/Provinces/Edit.cshtml
+++ b/TritonExpress/TritonExpress/Views/Provinces/Edit.cshtml
@@ -5,9 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
 
-<h4>Province</h4>
+<h4>Edit Province</h4>
 
 @if (ViewBag.Error != null)
 {
