--- a/TritonExpress/TritonExpress/Views/Provinces/Index.cshtml
+++ b/TritonExpress/TritonExpress/Views/Provinces/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Lists Of Provinces</h1>
 
 <p>
-    <a asp-action="Create">Create Province</a>
+    <a asp-action="Create">Add Province</a>
 </p>
 
 @if (ViewBag.Error != null)
