--- a/TritonExpress/TritonExpress/Views/Branches/Edit.cshtml
+++ b/TritonExpress/TritonExpress/Views/Branches/Edit.cshtml
@@ -5,10 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>Branches</h4>
+<h4>Edit a Branch</h4>
 <hr />
+@if (ViewBag.Error != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>@ViewBag.Error</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -39,7 +46,7 @@
                     <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                 </label>
             </div>
-      
+
             <div class="form-group">
                 @Html.LabelFor(m => m.Province)
                 @Html.DropDownListFor(m => m.Province, new SelectList(Model.Provinces, "Id", "Name"), new { @class = "form-control" })
