--- a/TritonExpress/TritonExpress/Views/Vehicles/Create.cshtml
+++ b/TritonExpress/TritonExpress/Views/Vehicles/Create.cshtml
@@ -1,14 +1,24 @@
-﻿@model TritonExpress.Models.Vehicle
+﻿@model TritonExpress.ViewModels.VehicleFormViewModel
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
 
-<h4>Vehicle</h4>
+
+<h4>Crete a Vehicle</h4>
 <hr />
+
+@if (ViewBag.Error != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>@ViewBag.Error</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -33,14 +43,14 @@
                 <input asp-for="RegistrationNumber" class="form-control" />
                 <span asp-validation-for="RegistrationNumber" class="text-danger"></span>
             </div>
-        
+
             <div class="form-group">
-                <label asp-for="BranchesId" class="control-label"></label>
-                <select asp-for="BranchesId" class ="form-control" asp-items="ViewBag.BranchesId"></select>
+                @Html.LabelFor(m => m.Branch)
+                @Html.DropDownListFor(m => m.Branch, new SelectList(Model.Branches, "Id", "BranchName"), new { @class = "form-control" })
             </div>
             <div class="form-group">
-                <label asp-for="VehicleTypeId" class="control-label"></label>
-                <select asp-for="VehicleTypeId" class ="form-control" asp-items="ViewBag.VehicleTypeId"></select>
+                @Html.LabelFor(m => m.VehicleType)
+                @Html.DropDownListFor(m => m.VehicleType, new SelectList(Model.VehicleTypes, "Id", "Name"), new { @class = "form-control" })
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
