DEV : Finishing Up

--- a/TritonExpress/TritonExpress/Views/Shared/_Layout.cshtml
+++ b/TritonExpress/TritonExpress/Views/Shared/_Layout.cshtml
@@ -30,17 +30,13 @@
                                 <a class="dropdown-item" asp-area="" asp-controller="Provinces" asp-action="Index">Provinces</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="VehicleTypes" asp-action="Index">VehicleTypes</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Status" asp-action="Index">Status</a>
-                              
+                                <a class="dropdown-item" asp-area="" asp-controller="Vehicles" asp-action="Index">Vehicles</a>
                             </div>
                         </li>
                    
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Branches" asp-action="Index">Branches</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Index">Vehicles</a>
-                        </li>
-                     
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="WayBills" asp-action="Index">WayBills</a>
