--- a/TritonExpress/TritonExpress/Views/Status/Index.cshtml
+++ b/TritonExpress/TritonExpress/Views/Status/Index.cshtml
@@ -19,7 +19,7 @@
         </button>
     </div>
 }
-<table class="table">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>
