--- a/TritonExpress/TritonExpress/Views/Vehicles/Index.cshtml
+++ b/TritonExpress/TritonExpress/Views/Vehicles/Index.cshtml
@@ -20,7 +20,7 @@
         </button>
     </div>
 }
-<table class="table">
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>
