--- a/TritonExpress/TritonExpress/Views/WayBills/Create.cshtml
+++ b/TritonExpress/TritonExpress/Views/WayBills/Create.cshtml
@@ -8,6 +8,16 @@
 
 <h4>Create a WayBills</h4>
 <hr />
+@if (ViewBag.Error != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>@ViewBag.Error</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
