DEV : Finishing Up

--- a/TritonExpress/TritonExpress/Views/WayBills/Index.cshtml
+++ b/TritonExpress/TritonExpress/Views/WayBills/Index.cshtml
@@ -30,7 +30,7 @@
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Weight)
+                @Html.DisplayNameFor(model => model.Weight)/KG
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Quantity)
